Created Schema, declared get and post routes, connected to database, post route set to build model, send chatroom data as response. React components created - in progress.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-chat",
   "version": "1.0.0",
-  "description": "",
+  "description": "You will be creating a piece of full stack software: a chat application.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,8 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave.git"
+  },
+  "bugs": {
+    "url": "https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave/issues"
+  },
+  "homepage": "https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave#readme",
+  "devDependencies": {}
 }
