added styling and mobile responsiveness

--- a/package.json
+++ b/package.json
@@ -24,6 +24,5 @@
   "bugs": {
     "url": "https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave/issues"
   },
-  "homepage": "https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/burlingtoncodeacademy-students/react-chat-sadie-dave#readme"
 }
